--- a/Index.HTML
+++ b/Index.HTML
@@ -57,7 +57,7 @@
         <li>Desarrollo FrontEnd</li>
       </ul>
     </section>
-      <a href="/ruta/al/archivo.pdf" download>Descargar mi curriculum en PDF</a>
+      <a href="archivo.pdf" download>Descargar mi curriculum en PDF</a>
 
     <footer>
       <p>Proyecto Final - Argentina Programa 4.0</p>
