--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h2>Datos Personales</h2>
         <ul>
           <li>45 años</li>
-          <li>Agentino</li>
+          <li>Argentino</li>
           <li>Ciudad de Salta</li>
           <li>Tel: 0387 - 5111111</li>
           <li>Mail: juan@martin.com </li>
