--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Juan Martín Scarponetti</title>
     <script src="curriculum.js"></script>
     <link rel="stylesheet" type="text/css" href="curriculum.css">
+    <link rel="icon" href="html.png" type="image/x-icon">
   </head>
   <body>
     <nav>
