--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Juan Martín Scarponetti</title>
     <script src="curriculum.js"></script>
-    <link rel="stylesheet" type="text/css" href="PaginaWebCurriculum/curriculum.css">
+    <link rel="stylesheet" type="text/css" href="curriculum.css">
     <link rel="icon" href="html.png" type="image/x-icon">
   </head>
   <body>
